@@ -18604,7 +18604,7 @@ B:BITE:HURT:1d2
 F:WILD_TOWN | WILD_ONLY  | RAND_50
 #F:WILD_LAKE
 F:AQUATIC | COLD_BLOOD | NO_SLEEP | AI_ANNOY
-F:MORTAL | BASEANGBAND
+F:MORTAL | BASEANGBAND | FRIEND
 D:Beautiful red fish in ponds.
 
 N:1055:Carp
@@ -18629,10 +18629,29 @@ O:0:0:0:0
 B:HIT:HURT:1d8
 B:HIT:HURT:1d8
 F:ANIMAL | AQUATIC | WILD_TOO | COLD_BLOOD | AI_ANNOY
-F:MORTAL | BASEANGBAND
+F:MORTAL | BASEANGBAND | FRIEND
 S:1_IN_10 | 
 S:ARROW_2
 D:A fish that hunts with jet of water.
+
+N:1057:Sirene
+G:h:B
+I:110:10d12:50:30:0
+W:22:2:1600:180
+E:1:1:1:2:1:0
+O:20:50:10:5
+B:TOUCH:LOSE_WIS
+B:TOUCH:INSANITY:3d4
+B:TOUCH:CONFUSE
+B:TOUCH:PARALYZE
+F:FEMALE | RAND_25 | DROP_1D2 | SMART | AQUATIC | NO_CONF
+#Z or Base?
+#F:MORTAL | ZANGBAND
+F:MORTAL | BASEANGBAND | FRIEND | AI_ANNOY
+S:1_IN_6
+S:TELE_TO | CONF | FORGET | DARKNESS
+D:A half-humanoid, half-bird spirit of the ocean, whose song charms
+D:mortals into her bed.. under the water.
 
 # N: serial number : monster name
 # G: symbol : color
