@@ -5,7 +5,7 @@
 # If you enable this your server will show up on the metaserver list and
 # players from the Internet may try connecting to it.  If you aren't on the
 # internet, or don't want your server to be publicly advertised, then disable
-# this option.
+# this option. [true]
 
 REPORT_TO_METASERVER = true
 
@@ -19,8 +19,8 @@ BIND_NAME = "64.53.71.115"
 # BIND_IP = "64.53.71.115"
 
 # Port numbers to use. [18348,18349]
-# If you change this value, ordinary clients cannot connect to you server
-# unless recompiled as such.
+# If changed, one should specify (game-)port number with -p option
+# when connecting.
 GAME_PORT = 18348
 CONSOLE_PORT = 18349
 
